2008-12-10  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Adjusted dimming values so foreground is more distinct.

	* src/launcher/hd-launcher.c (hd_launcher_set_top_blur):
	* src/mb/hd-comp-mgr.c (on_blur_timeline_new_frame):

2008-12-10  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Set "ellipsization" to none in launcher tiles.

	* src/launcher/hd-launcher-tile.c (hd_launcher_tile_set_text):

2008-12-09  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/mb/hd-app.c: set MB_SECONDARY on secondary windows

2008-12-09  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c (bg_image_notify, bg_image_dest_height,
	  hd_home_view_allocate, hd_home_view_dispose,
	  get_bg_image_processed_name, process_bg_image_thread,
	  hd_home_view_refresh_bg, hd_home_view_set_property,
	  hd_home_view_get_property, hd_home_view_set_background_image):
	* src/home/hd-home-view.h (priv): Remove unused color/background mode
	  code .

2008-12-09  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-task-navigator.c:
	  Fixed flicker to background that appeared on zoom in/out,
	  added smooth fade in + out of application border + title.

2008-12-09  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c (hd_home_view_constructed,
	  bg_image_set_idle_cb): Replace the old background actor if a new
	  image is set.

2008-12-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c: hd_comp_mgr_map_notify():
	  g_return_if_fail(the newly mapped window is the latest in the
	  window stack), which can happen when we're starting to manage
	  clients. Mitigates a NULL-pointer dereference.

2008-12-08  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-app.c (hd_app_init): Patch from Laszlo to check that the
	window in the same window group is indeed a stackable window.
	Fixes: NB#94559

2008-12-08  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.9
