@@ -97,7 +97,7 @@ void hd_home_hide_applet_buttons (HdHome *home);
 
 void hd_home_move_applet_buttons (HdHome *home, gint x_by, gint y_by);
 
-gint hd_home_get_current_view_id (HdHome *home);
+guint hd_home_get_current_view_id (HdHome *home);
 
 HdHomeView * hd_home_get_current_view (HdHome *home);
 
