@@ -1,3 +1,12 @@
+2008-12-10  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/home/hd-home-dbus.xml: Add GetCurrentViewID method to D-Bus
+	  interface.
+
+	* src/home/hd-home.c (hd_home_get_current_view_id):
+	* src/home/hd-home.h (hd_home_get_current_view_id): Change return
+	  value to unsigned int.
+
 2008-12-10  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
 
 	Adjusted dimming values so foreground is more distinct.
